--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,8 +4,8 @@
     <title>Spring Security Example</title>
 </head>
 <body>
-<h1>Welcome to Index PAGE!</h1>
-
+<h1>Welcome to Register PAGE!</h1>
+<a href="/login">Войти в систему</a>
 
 </body>
 </html>
