--- a/src/main/resources/templates/admin/update_user.html
+++ b/src/main/resources/templates/admin/update_user.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <h1>Update User</h1>
-<form th:method="PUT" th:action="@{/}" th:object="${user}">
+<form th:method="PATCH" th:action="@{/admin/update/{id}(id=${user.id})}" th:object="${user}">
 
     <label for="username">Enter username: </label>
     <input type="text" th:field="*{username}" id="username"/>
@@ -27,17 +27,24 @@
     <div style="color: red" th:if="${#fields.hasErrors('age')}" th:errors="*{age}">Error age</div>
     <br/>
     <br/>
+    <div class="field">
 
-<!--    <label for="roles">Enter role: </label>-->
-<!--    <input type="text" th:field="*{roles}" id="roles"/>-->
+        <label>Роли:
+            <input type="checkbox" name="roles"
+                   th:each="role: ${roles}"
+                   th:text="${role.name}"
+                   th:value="${role.getId()}"
+                   th:field="*{roles}"/>
+        </label>
+    </div>
+
     <br/>
-    <br/>
-    <label for="role">Роль 1 (ADMIN) или 2 (USER) ?</label>
-    <input type="text" th:field="*{roles}" id="role">
-
-
     <br/>
     <input type="submit" value="To change!"/>
 </form>
+<form th:method="POST" th:action="@{/logout}">
+    <input type="submit" value="Log Out"/>
+</form>
+
 </body>
 </html>
