--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <h1>Welcome to Register PAGE!</h1>
-<a href="/login">Войти в систему</a>
+<a href="/login">Login</a>
 
 </body>
 </html>
