--- a/src/main/resources/templates/user/my_page.html
+++ b/src/main/resources/templates/user/my_page.html
@@ -1,29 +1,79 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org"
+<html lang="ru" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org"
       xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
     <title>Spring Security Example</title>
 </head>
 <body>
-<h1>User, welcome spring boot security page!</h1>
-<form th:method="POST" th:action="@{/user}" th:object="${user}">
-    <div>
-        <p>Username : </p>
-        <td th:utext="'Username : ' + ${user.username}">Username</td>
-        <br/>
-        <hr/>
-        <p>Age : </p>
-        <td th:utext="'Age : ' + ${user.age}">Age</td>
-        <br/>
-        <hr/>
-        <p>Role : </p>
-        <td th:utext="'Role : ' + ${user.roles}">Role</td>
-        <br/>
-        <hr/>
-    </div>
-</form>
-    <form th:method="POST" th:action="@{/logout}">
-        <input type="submit" value="Log Out"/>
+<nav class="navbar navbar-light bg-dark">
+    <p class="navbar-brand text-white">
+        <b><span class="align-middle" th:utext="${user.getUsername()}"></span></b>
+        <span class="align-middle">with roles: </span>
+        <span class="align-middle" th:utext="${user.getRoles()}"></span>
+    </p>
+    <form th:action="@{/logout}" th:method="POST">
+        <button type="submit" class="btn btn-dark text-secondary">Logout</button>
     </form>
+    </div>
+</nav>
+<div class="container-fluid">
+    <div class="row">
+        <div class="p-0 col-2">
+            <div class="nav flex-column nav-pills pt-4" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+                <a class="nav-link active" data-bs-target="#admin" data-bs-toggle="tab"
+                   role="tab" th:if="${user.getRoles().contains('ADMIN')}"
+                   aria-controls="v-pills-profile" aria-selected="true">Admin</a>
+                <a class="nav-link" data-bs-target="#user" data-bs-toggle="tab"
+                   role="tab"
+                   aria-controls="v-pills-profile" aria-selected="false">User</a>
+            </div>
+        </div>
+        <div class="col-10 px-0">
+            <div class="tab-content" id="homeTabContent">
+                <div class="tab-pane fade show active" id="admin" role="tabpanel" aria-labelledby="admin"
+                     th:if="${user.getRoles().contains('ADMIN')}">
+                    <div class="container-fluid">
+                        <h1 class="m-3 fw-bold">User information-page</h1>
+                        <div class="tab-content" id="tabContent">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<form th:method="POST" th:action="@{/user}" th:object="${user}">
+    <table class="table table-hover">
+        <thead>
+        <h>About user</h>
+        <tr>
+            <th>Id</th>
+            <th>Username</th>
+            <th>Age</th>
+            <th>Role</th>
+        </tr>
+        </thead>
+
+        <tbody>
+        <tr>
+            <td th:utext="${user.id}"></td>
+            <td th:utext="${user.username}"></td>
+            <td th:utext="${user.age}"></td>
+            <td th:utext="${user.roles}"></td>
+
+        </tr>
+        </tbody>
+    </table>
+</form>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 </body>
 </html>
