--- a/src/main/resources/templates/admin/all_users.html
+++ b/src/main/resources/templates/admin/all_users.html
@@ -112,18 +112,15 @@
                                                                                 data-bs-dismiss="modal"
                                                                                 aria-label="Close"></button>
                                                                     </div>
-                                                                    <form th:action="@{/admin/update/{id}(id=${user.getId})}"
-                                                                          th:object="${user}" th:method="PATCH">
+                                                                    <form th:action="@{/admin/{id}(id=${user.getId()})}"
+                                                                          th:object="${user}" th:method="PUT">
                                                                         <div class="modal-body col-md text-center was-validated">
                                                                             <br>
                                                                             <label for="id0"><b>ID</b></label>
                                                                             <input th:name="id" th:type="text"
                                                                                    class="form-control"
                                                                                    id="id0" th:value="*{id}" disabled/>
-                                                                            <div class="invalid-feedback">
-                                                                                Пожалуйста, введите пароль не меньше 2х
-                                                                                символов.
-                                                                            </div>
+
                                                                             <br>
 
                                                                             <label for="Username"><b>Username</b></label>
@@ -134,21 +131,27 @@
                                                                             <label for="age0"><b>Age</b></label>
                                                                             <input th:name="age" th:type="number"
                                                                                    class="form-control" id="age0"
+                                                                                   th:min="0"
                                                                                    th:value="*{age}"/>
                                                                             <br>
+
                                                                             <label for="password0"><b>Password</b></label>
-                                                                            <input th:name="password" type="password"
-                                                                                   class="form-control" id="password0"/>
-                                                                            <br>
+                                                                            <div class="input-group was-validated">
+                                                                                <input th:name="password"
+                                                                                       type="password"
+                                                                                       class="form-control"
+                                                                                       id="password0"
+                                                                                       placeholder="Введите пароль"
+                                                                                       required/>
+                                                                            </div>
                                                                             <label for="roles"><b>Role</b></label>
-                                                                            <select class="form-control" id="roles"
+                                                                            <select class="form-select" id="roles"
                                                                                     name="roles"
-                                                                                        multiple="multiple">
+                                                                                    multiple="multiple">
                                                                                 <option th:each="role : ${allRoles}"
-                                                                                        th:selected="${role.getName()}"
+                                                                                        th:text="${role.name}"
                                                                                         th:value="${role.getId()}"
-                                                                                        th:text="${role.getName()}">Role
-                                                                                    name
+                                                                                        th:field="*{roles}">Role name
                                                                                 </option>
                                                                             </select>
                                                                             <br><br>
@@ -203,6 +206,17 @@
                                                                                    disabled/>
                                                                             <br>
                                                                             <br>
+                                                                            <label for="roleDelete"><b>Role</b></label>
+                                                                            <select class="form-control" id="roleDelete"
+                                                                                    name="role"
+                                                                                    multiple="multiple" disabled>
+                                                                                <option th:each="role : ${user.roles} "
+                                                                                        th:selected="${role.getName()}"
+                                                                                        th:value="${role.getName()}"
+                                                                                        th:text="${role.getName()}">Role
+                                                                                    name
+                                                                                </option>
+                                                                            </select>
                                                                         </div>
 
                                                                         <div class="modal-footer">
@@ -255,7 +269,7 @@
                                                         <label for="ageNew"><b>Age</b></label>
                                                         <div class="input-group was-validated">
                                                             <input th:name="age" th:type="number"
-                                                                   class="form-control" id="ageNew"
+                                                                   class="form-control" id="ageNew" th:min="0"
                                                                    th:value="*{age}"
                                                                    placeholder="Введите возраст"
                                                                    required/>
@@ -282,7 +296,6 @@
                                                                 name="roles"
                                                                 multiple="multiple">
                                                             <option th:each="role : ${user.roles}"
-                                                                    th:selected="${role.getName()}"
                                                                     th:value="${role.getId()}"
                                                                     th:text="${role.getName()}">
                                                                 Role name
