--- a/src/main/resources/templates/user/my_page.html
+++ b/src/main/resources/templates/user/my_page.html
@@ -3,11 +3,13 @@
       xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 
 <head>
-    <meta charset="UTF-8">
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 
     <title>Spring Security Example</title>
 </head>
@@ -30,18 +32,47 @@
                 <a class="nav-link active" data-bs-target="#admin" data-bs-toggle="tab"
                    role="tab" th:if="${user.getRoles().contains('ADMIN')}"
                    aria-controls="v-pills-profile" aria-selected="true">Admin</a>
-                <a class="nav-link" data-bs-target="#user" data-bs-toggle="tab"
+                <a class="nav-link active" data-bs-target="#user" data-bs-toggle="tab"
                    role="tab"
                    aria-controls="v-pills-profile" aria-selected="false">User</a>
             </div>
         </div>
         <div class="col-10 px-0">
-            <div class="tab-content" id="homeTabContent">
-                <div class="tab-pane fade show active" id="admin" role="tabpanel" aria-labelledby="admin"
-                     th:if="${user.getRoles().contains('ADMIN')}">
-                    <div class="container-fluid">
-                        <h1 class="m-3 fw-bold">User information-page</h1>
-                        <div class="tab-content" id="tabContent">
+            <div class="tab-content" id="pills-tabContent">
+                <div class="tab-pane fade" id="admin" role="tabpanel" aria-labelledby="admin">
+                </div>
+            </div>
+            <div class="tab-pane fade show active" id="user" role="tabpanel" aria-labelledby="user">
+                <div class="container-fluid">
+                    <h1 class="m-3 fw-bold">User information-page</h1>
+                    <div class="card">
+                        <div class="card-header">
+                            <div class="m-1">
+                                <h5>About user</h5>
+                            </div>
+                        </div>
+
+                        <div class="card-body" bg-primary text-white>
+                            <table class="table table-striped table-hover">
+                                <thead>
+                                <tr>
+                                    <th>Id</th>
+                                    <th>Username</th>
+                                    <th>Age</th>
+                                    <th>Role</th>
+                                </tr>
+                                </thead>
+
+                                <tbody>
+                                <tr>
+                                    <td th:utext="${user.getId()}"></td>
+                                    <td th:utext="${user.getUsername()}"></td>
+                                    <td th:utext="${user.getAge()}"></td>
+                                    <td th:utext="${user.getRoles()}"></td>
+
+                                </tr>
+                                </tbody>
+                            </table>
                         </div>
                     </div>
                 </div>
@@ -49,31 +80,10 @@
         </div>
     </div>
 </div>
-<form th:method="POST" th:action="@{/user}" th:object="${user}">
-    <table class="table table-hover">
-        <thead>
-        <h>About user</h>
-        <tr>
-            <th>Id</th>
-            <th>Username</th>
-            <th>Age</th>
-            <th>Role</th>
-        </tr>
-        </thead>
-
-        <tbody>
-        <tr>
-            <td th:utext="${user.id}"></td>
-            <td th:utext="${user.username}"></td>
-            <td th:utext="${user.age}"></td>
-            <td th:utext="${user.roles}"></td>
-
-        </tr>
-        </tbody>
-    </table>
-</form>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+</div>
+</div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"></script>
 </body>
 </html>
